apps/app-proxy/overlays/nimacap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nimacap-cap-app-proxy
  namespace: nimacap
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
